Fixed Custom Double Scrollbar sizing issue and color GROOV-923

--- a/app/themes/groove-tech/stylesheets/custom-grid.css.scss
+++ b/app/themes/groove-tech/stylesheets/custom-grid.css.scss
@@ -26,22 +26,19 @@
   vertical-align: text-top;
 }
 
-#style-1::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius: 10px;
-  background-color: red;
-}
-
-#style-1::-webkit-scrollbar
-{
+.table-parent::-webkit-scrollbar, .suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar {
   width: 12px;
-  background-color: #F5F5F5;
 }
 
-#style-1::-webkit-scrollbar-thumb
-{
+.table-parent::-webkit-scrollbar-track, .suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar-track {
+  //-webkit-box-shadow: inset 0 0 8px rgba(53, 65, 56, 0.90);
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #555;
+}
+
+.table-parent::-webkit-scrollbar-thumb, .suwala-doubleScroll-scroll-wrapper::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  //background: #628c3a;
+  &:hover {
+    background: #74a03e;
+  }
 }
